fix: card content alignment

--- a/src/CardTemplate.css
+++ b/src/CardTemplate.css
@@ -8,7 +8,7 @@
     display: grid;
     grid-template-columns: 1fr 3fr;
     grid-template-rows: 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr 2fr;
-    justify-items: center;
+    justify-items: start;
     align-items: center;
 }
 .cardTemplate.empty
@@ -17,6 +17,11 @@
     grid-row: 2 / span 2;
     color: black;
     font-size: 2rem;
+}
+
+.cardTemplate > *
+{
+    padding-left: 5px;
 }
 
 .cardTemplate .habitatContainer
@@ -49,12 +54,14 @@
 {
     grid-column: 1;
     grid-row: 5;
+    align-self: start;
 }
 
 .cardTemplate .wingspanContainer
 {
     grid-column: 2;
     grid-row: 6;
+    justify-self: center;
 }
 
 .cardTemplate .descriptionContainer
